[gd_scene load_steps=2 format=3 uid="uid://fii1xpxifsun"]

[ext_resource type="Script" uid="uid://b8856euvmr15g" path="res://scripts/disctactions/distraction_timer_defuse.gd" id="1_ju7hv"]

[node name="distraction_timer_suprise" type="ColorRect" groups=["distraction"]]
custom_minimum_size = Vector2(128, 128)
script = ExtResource("1_ju7hv")

[node name="TimerCountdown" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerHidden" type="Timer" parent="."]
wait_time = 20.0

[node name="Button" type="Button" parent="."]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 9.785
offset_right = 55.0
offset_bottom = 40.785
grow_horizontal = 2
grow_vertical = 2
text = "defuse"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.515
offset_right = 20.0
offset_bottom = -15.515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "suprise timer"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="TimerCountdown" to="." method="_on_timer_countdown_timeout"]
[connection signal="timeout" from="TimerHidden" to="." method="_on_timer_hidden_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
